@@ -100,6 +100,9 @@ AC_OUTPUT(
 
   examples/Makefile
   examples/png_file/Makefile
+  examples/pdf-surface/Makefile
+  examples/ps-surface/Makefile
+  examples/svg-surface/Makefile
 
   cairomm-1.0.pc
 )
