@@ -1,3 +1,3 @@
-SUBDIRS = png_file
+SUBDIRS = png_file pdf-surface ps-surface svg-surface
 
 EXTRA_DIST = README Makefile.am_fragment
