@@ -1,0 +1,7 @@
+include $(top_srcdir)/examples/Makefile.am_fragment
+
+# build the executable but don't install it
+noinst_PROGRAMS = example_ps_file
+example_ps_file_SOURCES = main.cc
+
+CLEANFILES = image.ps
